# workout_tracker

backend/: .env  .env.example  .gitignore  README.md  add_duracao_column.py  fittracker.db  main.py  package.json  pyproject.toml  requirements.txt  server.js
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  deps.py  endpoints.py  exercicios.py  usuarios.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: auth.py  exercises.py  statistics.py  users.py  workout_executions.py  workouts.py
backend/app/core/: config.py  security.py
backend/app/crud/: __init__.py  base.py  crud_exercise.py  crud_goal.py  crud_user.py  crud_workout.py  crud_workout_execution.py  usuario.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: __init__.py  execucao.py  exercicio.py  exercise.py  goal.py  treino.py  user.py  usuario.py  workout.py  workout_execution.py
backend/app/schemas/: __init__.py  execucao.py  exercicio.py  exercise.py  goal.py  token.py  treino.py  user.py  usuario.py  workout.py  workout_execution.py
backend/app/utils/: dependencies.py
backend/controllers/: authController.js  userController.js
backend/middleware/: auth.js
backend/models/: User.js
backend/routes/: user.js
backend/tests/: conftest.py
backend/tests/api/api_v1/: test_exercises.py  test_login.py  test_users.py
backend/tests/utils/: exercise.py  user.py
frontend/: DOCUMENTATION.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  page.tsx.new
frontend/components/: api-status.tsx  auth-guard.tsx  navbar.tsx
(+28 files in other folders)
